# microservice_shuttle_impl-

./: README.md  docker-compose.yaml
.github/workflows/: generator-generic-ossf-slsa3-publish.yml
service/analytics/: Cargo.toml
service/analytics/migrations/: 20250630213100_analytics.down.sql  20250630213100_analytics.up.sql
service/analytics/src/: main.rs
service/blog/: Cargo.toml
