[package]
name = "analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
shuttle-actix-web = "0.55.0"
shuttle-runtime = "0.55.0"
sqlx = {version ="0.8.6", features = ["postgres", "runtime-tokio-native-tls"]}
tokio = {version ="1.26.0", features = ["full"]}
dotenv = "0.15.0"
shuttle-shared-db = {version ="0.55.0", features = ["postgres", "sqlx"]}
